# libconfig-test

./: CMakeLists.txt
config/: config.cfg
src/: CMakeLists.txt  main.cc  main2.cpp
